<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:padding="10sp"
    tools:context=".Questions">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_title"
            android:textSize="35sp"
            android:textAlignment="center"
            android:layout_marginTop="5sp"
            android:textColor="@color/colorAccent"
            android:fontFamily="sans-serif-black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <TextView
            android:id="@+id/q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/ques_2"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heading" />

        <CheckBox
            android:id="@+id/diabetes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_diabetes"
            android:textSize="20sp"
            android:layout_marginTop="10sp"
            android:buttonTint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q1" />
        <CheckBox
            android:id="@+id/hypertension"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_hypertension"
            android:textSize="20sp"
            android:layout_marginTop="10sp"
            android:buttonTint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diabetes" />
        <CheckBox
            android:id="@+id/lung_disease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_lung_disease"
            android:textSize="20sp"
            android:layout_marginTop="10sp"
            android:buttonTint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hypertension" />

        <CheckBox
            android:id="@+id/bloodsugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_blood_sugar"
            android:textSize="20sp"
            android:layout_marginTop="10sp"
            android:buttonTint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lung_disease" />

        <CheckBox
            android:id="@+id/nota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_none_of_above"
            android:textSize="20sp"
            android:layout_marginTop="10sp"
            android:buttonTint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bloodsugar" />

        <TextView
            android:id="@+id/q3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/ques_3"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nota" />

        <Switch
            android:id="@+id/q3a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_yes_no"
            android:textSize="20sp"
            android:layout_marginTop="10sp"
            android:textAlignment="center"
            android:paddingRight="100sp"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q3" />

        <TextView
            android:id="@+id/q4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/ques_4"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q3a" />

        <Switch
            android:id="@+id/q4a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_yes_no"
            android:textSize="20sp"
            android:layout_marginTop="10sp"
            android:textAlignment="center"
            android:paddingRight="100sp"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/q4" />



        <Button
            android:id="@+id/submit"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="10sp"
            android:text="@string/btn_submit"
            android:textSize="20sp"
            android:textAllCaps="false"
            app:rippleColor="#ABC1BF"
            app:cornerRadius="32dp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q4a" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.527"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.468" />


    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>