<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".LoginActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ss_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/ss_app_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:text="@string/app_display_title"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:fontFamily="sans-serif-black"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ss_contact_number_TIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/hint_phone_number"
            android:textColorHint="@color/colorAccent"
            app:hintTextColor="@color/colorAccent"
            app:boxBackgroundMode="outline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusTopEnd="32dp"
            app:boxCornerRadiusBottomStart="32dp"
            app:boxCornerRadiusBottomEnd="32dp"
            app:boxCornerRadiusTopStart="32dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorAccent"
            app:boxStrokeColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ss_app_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ss_contact_number"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="@color/colorAccent"
                android:maxLines="1"
                android:inputType="phone"
                android:drawableStart="@drawable/ic_phone_black_24dp"
                android:drawablePadding="5dp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ss_password_TIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textColorHint="@color/colorAccent"
            app:hintTextColor="@color/colorAccent"
            android:hint="@string/hint_password"
            app:boxBackgroundMode="outline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusTopEnd="32dp"
            app:boxCornerRadiusBottomStart="32dp"
            app:boxCornerRadiusBottomEnd="32dp"
            app:boxCornerRadiusTopStart="32dp"
            app:endIconTint="@color/colorAccent"
            app:boxStrokeColor="@color/colorAccent"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ss_contact_number_TIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ss_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:maxLines="1"
                android:inputType="text"
                android:textColor="@color/colorAccent"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:drawablePadding="5dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/ss_login"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="80dp"
            android:text="@string/login"
            android:textColor="@color/colorPrimaryDark"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:rippleColor="#ABC1BF"
            app:cornerRadius="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ss_password_TIL" />

        <TextView
            android:id="@+id/ss_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/or"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ss_login"/>

        <Button
            android:id="@+id/ss_sign_up"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:text="@string/Signup"
            android:layout_marginBottom="85dp"
            android:textColor="@color/colorPrimaryDark"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:rippleColor="#ABC1BF"
            app:cornerRadius="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ss_or" />

        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/ss_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ss_password_TIL" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>